<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="myapps_title">My Nanodegree Apps!</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="buildbigger_app">Build It Bigger</string>
    <string name="xyz_app">XYZ Reader</string>
    <string name="capstone_app">Capstone App</string>

    <string name="stay_tuned">Stay tuned for my</string>
</resources>
