<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Title"
            android:text="@string/myapps_title" />

        <Button
            android:id="@+id/project1_spotify"
            style="@style/ButtonStyle"
            android:onClick="makeToast"
            android:text="@string/spotify_app" />

        <Button
            android:id="@+id/project2_scores"
            style="@style/ButtonStyle"
            android:onClick="makeToast"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/project3_library"
            style="@style/ButtonStyle"
            android:onClick="makeToast"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/project4_build"
            style="@style/ButtonStyle"
            android:onClick="makeToast"
            android:text="@string/buildbigger_app" />

        <Button
            android:id="@+id/project5_xyz"
            style="@style/ButtonStyle"
            android:onClick="makeToast"
            android:text="@string/xyz_app" />

        <Button
            android:id="@+id/project6_capstone"
            style="@style/ButtonStyle"
            android:background="#F44336"
            android:onClick="makeToast"
            android:text="@string/capstone_app" />


    </LinearLayout>

</ScrollView>
